<resources>
    <string name="app_name">Guitar Tuner</string>
    <string name="settings">Settings</string>
    <string name="mic_sensitivity">Mic Sensitivity</string>
    <string name="standard_tune">Standard Tune</string>
    <string name="drop_d">Drop D</string>
    <string name="open_d">Open D</string>
    <string name="auto">Auto</string>
    <string name="select_tune">Select Tune</string>
    <string name="add_new_tune">Add New Tune</string>
    <string name="set_microphone_sensitivity">Set Microphone Sensitivity</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="icon">Icon</string>
    <string name="tune_name">Tune Name</string>
    <string name="set_note">Set Note</string>
    <string name="cancel">Cancel</string>
    <string name="tune_name_empty_toast">Please enter tune name</string>
    <string name="tune_name_exist_toast">This tune name already exists</string>
    <string name="note_select_toast">Please select note</string>
    <string name="pick_a_note">Pick a note</string>
    <string name="delete">Delete</string>
    <string name="delete_tune_confirm">Do you want to delete\u0020</string>
</resources>
