<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".GuitarTuner">
    <item android:title="@string/settings"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="always" >
        <menu>
            <item android:id="@+id/tune_select_edit"
                android:title="@string/edit"
                android:icon="@drawable/edit_icon"
                android:orderInCategory="100"
                app:showAsAction="never" />
            <item android:id="@+id/tune_select_delete"
                android:title="@string/delete"
                android:icon="@drawable/delete_icon"
                android:orderInCategory="200"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
