<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:stretchColumns="1">
    <include android:id="@+id/guitartuner_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        layout="@layout/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tuneNameLabel"
        android:text="@string/tune_name"
        android:layout_below="@id/guitartuner_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tuneNameLabel"
        android:id="@+id/tuneNameInput"
        android:inputType="text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editNoteLabel"
        android:text="@string/set_note"
        android:layout_below="@id/tuneNameInput"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/editNoteBtnLayout"
        android:layout_below="@+id/editNoteLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/GuitarTunerTheme.NoteSelectButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/GuitarTunerTheme.NoteSelectButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/GuitarTunerTheme.NoteSelectButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/GuitarTunerTheme.NoteSelectButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/GuitarTunerTheme.NoteSelectButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/GuitarTunerTheme.NoteSelectButtonStyle"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/editTune_okBtn"
        android:layout_below="@+id/editNoteBtnLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/GuitarTunerTheme.ButtonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/editTune_cancelBtn"
        android:layout_below="@+id/editNoteBtnLayout"
        android:layout_toRightOf="@+id/editTune_okBtn"
        android:layout_toEndOf="@+id/editTune_okBtn"
        style="@style/GuitarTunerTheme.ButtonStyle"/>

</RelativeLayout>